# Knowledge

./: .gitignore  .gitmodules  BUILDING.md  BeobachtungenVorlesung.txt  CMakeLists.txt  README.md  UserDefinitions.cmake.example
CMakeModules/: ConfigureCopyScript.cmake  FindPortaudio.cmake  FindQt5Module.cmake
script/: copy_dlls.bat.in  copy_opencv_dlls.bat.in  env.bat.in  shell.bat.in
src/: CMakeLists.txt
src/JUCE/: CMakeLists.txt
src/camera-test/: CMakeLists.txt  CameraProducer.h  ImageConsumer.h  ImageConsumerProducer.h  ImageProcessor.h  MainWindow.cpp  MainWindow.h  NamedWindow.h  QtHelper.h  main.cpp
src/camera-test/ui/: MainWindow.ui
src/core/: CMakeLists.txt  Component.cpp  Component.h  Consumer.cpp  Consumer.h  ConsumerProducer.h  Data.cpp  Data.h  DequeBuffer.cpp  DequeBuffer.h  DequePool.cpp  DequePool.h  IConsumer.cpp  IConsumer.h  IData.cpp  IData.h  IProducer.cpp  IProducer.h  Producer.cpp  Producer.h  dummy.cpp  main.cpp
src/core-test/: CMakeLists.txt  IntConsumeTest.h  main.cpp
src/juce-test/: CMakeLists.txt  main.cpp
src/opencv-graph/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp  opencv-test
src/opencv-test/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  main.cpp
src/portAudio/: CMakeLists.txt
src/portAudio-test/: CMakeLists.txt  SoundBuffer.cpp  SoundBuffer.h  defines.h  main.cpp  record.cpp  record.h  sine.cpp  sine.h  split.h
src/qt-test/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/qt-test/ui/: MainWindow.ui
